[gd_scene load_steps=2 format=2]

[ext_resource path="res://Singletons/MusicController.gd" type="Script" id=1]


[node name="MusicController" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GlobalMusicPlayer" type="AudioStreamPlayer" parent="."]

[node name="SoundPlayer" type="AudioStreamPlayer" parent="."]
[connection signal="finished" from="GlobalMusicPlayer" to="." method="_on_GlobalMusicPlayer_finished"]
